# ECE-1724-RUST-Project

./: .gitignore  README.md
personal-finance-tracker/: .env  Cargo.toml  finance_tracker.db  finance_tracker.db-shm  finance_tracker.db-wal  seed.sql
personal-finance-tracker/migrations/: 20250101_create_accounts.sql  20250102_create_categories.sql  20250103_create_transactions.sql  20250104_create_tags.sql  20250105_create_transaction_tags.sql  20250106_create_recurring_transactions.sql  20250107_create_currency_rates.sql  20250109_create_budgets.sql  20250110_create_saving_goals.sql  20250111_update_transaction.sql
personal-finance-tracker/src/: lib.rs  main.rs
personal-finance-tracker/src/backend/: handlers.rs  mod.rs  routes.rs
personal-finance-tracker/src/cli/: api.rs  input.rs  mod.rs  state.rs  ui.rs  util.rs
personal-finance-tracker/src/database/db/: connection.rs  migrate.rs  mod.rs  queries.rs  queries_postgre.rs
personal-finance-tracker/src/database/models/: account.rs  budget.rs  category.rs  currency_rate.rs  mod.rs  recurring_transaction.rs  saving_goal.rs  saving_goals.rs  tag.rs  transaction.rs
