[package]
name = "personal-finance-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0" }
anyhow = "1.0.100"