[package]
name = "personal-finance-tracker"
version = "0.1.0"
edition = "2024"
default-run = "personal-finance-tracker"

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde-with-str"] }
anyhow = "1.0.100"
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"