[package]
name = "personal-finance-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono", "rust_decimal"] }
rust_decimal = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.100"